peac_dev/force-app/main/default/objects/OpportunityFieldsValidation__mdt/OpportunityFieldsValidation__mdt.object-meta.xml
<CustomObject>
    <description>Edit the fields depends on the stage</description>
    <label>OpportunityFieldsValidation</label>
    <pluralLabel>OpportunityFieldsValidation</pluralLabel>
</CustomObject>