peac_dev/force-app/main/default/objects/OpportunityFieldsValidation__mdt/fields/Profile_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_Role_ID__c</fullName>
    <label>Profile/Role ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>