peac_dev/force-app/main/default/objects/OpportunityFieldsValidation__mdt/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>StageName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>