peac_dev/force-app/main/default/objects/OpportunityFieldsValidation__mdt/listViews/All_Fields_View.listView-meta.xml
<ListView>
    <fullName>All_Fields_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>FieldName__c</columns>
    <columns>Profile_Role_ID__c</columns>
    <columns>StageName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields View</label>
</ListView>